--- a/.github/main.yml
+++ b/.github/main.yml
@@ -1,1 +1,14 @@
 
+name: Say Hello Homer
+
+on: [push]
+
+jobs: 
+  build: 
+
+    runs-on: ubuntu-latest
+    steps: 
+      - uses: actions/checkout@v2
+
+      - name: Say Hello
+      - run: echo Hello, Homer how are you!
