--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,11 +3,13 @@ name: Say Hello Homer
 on: [push]
 
 jobs: 
+
   build: 
 
     runs-on: ubuntu-latest
+
     steps: 
       - uses: actions/checkout@v2
 
       - name: Say Hello
-      - run: echo Hello, Homer how are you!
+        run: echo Hello, Homer how are you!
