--- a/.github/workflows/simple.yml
+++ b/.github/workflows/simple.yml
@@ -8,6 +8,10 @@ jobs:
     steps:
       - name: echo a string
         run: echo "Hello, Simple YML"
+      - name: echo multi-line string
+        run: |
+          node -v
+          npm -v
 
 
 
