--- a/.github/workflows/easy.yml
+++ b/.github/workflows/easy.yml
@@ -9,7 +9,7 @@ jobs:
     steps:
       - name: Simple JS Action
         id: greeting
-        run: actions/hello-world-javascript-action@v1.1
+        uses: actions/hello-world-javascript-action@main
         with: 
           who-to-greet: Homer Simpson
       - name: Log out greeting
