At every 5th minute from 0 through 59.

--- a/.github/workflows/easy.yml
+++ b/.github/workflows/easy.yml
@@ -2,7 +2,8 @@ name: Setting up Cron workflow
 
 on:  
   schedule:
-    - cron: "*/5 * * * *"
+    - cron: "0/5 * * * *"
+    - cron: "0/5 * * * *"
   #push:
 
 jobs: 
