--- a/.github/workflows/easy.yml
+++ b/.github/workflows/easy.yml
@@ -2,8 +2,7 @@ name: Setting up Cron workflow
 
 on:  
   schedule:
-    - cron: "0/5 * * * *"
-    - cron: "0/6 * * * *"
+    - cron: "*/5 * * * *"
   #push:
 
 jobs: 
