--- a/.github/workflows/easy.yml
+++ b/.github/workflows/easy.yml
@@ -2,7 +2,10 @@ name: Setting up Cron workflow
 
 on:  
   schedule:
-    - cron: "*/5 * * * *"
+    # This cron schedule works but it took about 20mins to show up on Github
+    # - cron: "*/5 * * * *"
+    # On thing I would like to check is does "0/5 * * * *" work?
+    - cron: "0/5 * * * *"
   #push:
 
 jobs: 
