--- a/.github/workflows/easy.yml
+++ b/.github/workflows/easy.yml
@@ -1,7 +1,7 @@
 name: Setting up Cron workflow
 
 on:  
-  schedule:
+  # schedule:
     # This cron schedule works but it took about 20mins to show up on Github
     # - cron: "*/5 * * * *"
     # On thing I would like to check is does "0/5 * * * *" work? After testing. Yes it does work. 
