--- a/.github/workflows/easy.yml
+++ b/.github/workflows/easy.yml
@@ -7,7 +7,7 @@ on:
     # On thing I would like to check is does "0/5 * * * *" work? After testing. Yes it does work. 
     # Commented out to stop it going on indefinitely. 
     # - cron: "0/5 * * * *"
-  #push:
+  push:
 
 jobs: 
   hello-world-job:
